[gd_scene load_steps=7 format=3 uid="uid://c0hhg1ysg1ers"]

[ext_resource type="Script" path="res://scripts/gate.gd" id="1_slcxk"]
[ext_resource type="Texture2D" uid="uid://dnt5mmmtoufjm" path="res://assets/custom assets/gates/gate_green.png" id="2_fpvv7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ebkd"]
size = Vector2(16, 32)

[sub_resource type="Gradient" id="Gradient_jcnx6"]
offsets = PackedFloat32Array(0, 0.8)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_uhmrx"]
gradient = SubResource("Gradient_jcnx6")
width = 48
height = 48
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_f1p7y"]
radius = 24.0

[node name="GateGreen" type="StaticBody2D" groups=["gate"]]
collision_mask = 6
script = ExtResource("1_slcxk")
gate_color = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_fpvv7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5ebkd")

[node name="ActivateLight" type="PointLight2D" parent="."]
color = Color(0.305882, 0.356863, 0.192157, 1)
texture = SubResource("GradientTexture2D_uhmrx")

[node name="DetectPlayer" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
shape = SubResource("CircleShape2D_f1p7y")

[connection signal="body_entered" from="DetectPlayer" to="." method="_on_detect_player_body_entered"]
[connection signal="body_exited" from="DetectPlayer" to="." method="_on_detect_player_body_exited"]
